node-main/deps/v8/test/message/fail/spread-call-2.out
*%(basename)s:5: TypeError: x is not iterable (cannot read property undefined)
console.log(1, ...x);
                  ^
TypeError: x is not iterable (cannot read property undefined)
    at *%(basename)s:5:9
